# smart_backtest_platform

./: .gitignore
docker/: docker-compose.yml
ingestion/cplusplus_consumer/: .dockerignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake  vcpkg.json
ingestion/cplusplus_consumer/src/: main.cpp
ingestion/mock_vendor/: Dockerfile  producer.py
storage/: init_db.sql
